deploy/k8s/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skin-auth
  namespace: skinai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skin-auth
  template:
    metadata:
      labels:
        app: skin-auth
    spec:
      containers:
        - name: skin-auth
          image: alpharaway/skin-auth:v1
          ports:
            - containerPort: 19081
---
apiVersion: v1
kind: Service
metadata:
  name: skin-auth
  namespace: skinai
spec:
  selector:
    app: skin-auth
  ports:
    - port: 19081
      targetPort: 19081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skin-ai
  namespace: skinai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skin-ai
  template:
    metadata:
      labels:
        app: skin-ai
    spec:
      containers:
        - name: skin-ai
          image: alpharaway/skin-ai:v1
          ports:
            - containerPort: 19082
---
apiVersion: v1
kind: Service
metadata:
  name: skin-ai
  namespace: skinai
spec:
  selector:
    app: skin-ai
  ports:
    - port: 19082
      targetPort: 19082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skin-server
  namespace: skinai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skin-server
  template:
    metadata:
      labels:
        app: skin-server
    spec:
      containers:
        - name: skin-server
          image: alpharaway/skin-server:v1
          ports:
            - containerPort: 19083
---
apiVersion: v1
kind: Service
metadata:
  name: skin-server
  namespace: skinai
spec:
  selector:
    app: skin-server
  ports:
    - port: 19083
      targetPort: 19083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skin-gateway
  namespace: skinai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skin-gateway
  template:
    metadata:
      labels:
        app: skin-gateway
    spec:
      containers:
        - name: skin-gateway
          image: alpharaway/skin-gateway:v1
          ports:
            - containerPort: 19080
---
apiVersion: v1
kind: Service
metadata:
  name: skin-gateway
  namespace: skinai
spec:
  selector:
    app: skin-gateway
  ports:
    - port: 19080
      targetPort: 19080
